[tool.poetry]
name = "my-vit-pytorch"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "vit_pytorch"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.0"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
timm = "^0.9.2"
vit-pytorch = "^1.2.2"
matplotlib = "^3.7.1"
pandas = "^2.0.2"
linformer = "^0.2.1"
jupyter = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
